<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewStyle"
    tools:context="com.example.android.flashcards.ConfigActivity">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/LayoutStyle">

        <TextView
            android:id="@+id/tv_name_label"
            style="@style/NameTitle"
            android:text="@string/user_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name"
            style="@style/NameEditText"
            android:hint="@string/typing_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_label" />

        <TextView
            android:id="@+id/tv_categories_label"
            style="@style/CategoriesTitle"
            android:text="@string/category_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <CheckBox
            android:id="@+id/cb_category_events"
            style="@style/CategoryCheckBoxLeft"
            android:text="@string/category_a"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_categories_label" />

        <CheckBox
            android:id="@+id/cb_category_persons"
            style="@style/CategoryCheckBoxRight"
            android:text="@string/category_b"
            app:layout_constraintTop_toTopOf="@id/cb_category_events"
            app:layout_constraintLeft_toRightOf="@id/cb_category_events"
            android:layout_marginLeft="@dimen/margin_between_checkboxes"
            android:layout_marginStart="@dimen/margin_between_checkboxes" />

        <CheckBox
            android:id="@+id/cb_category_definitions"
            style="@style/CategoryCheckBoxLeft"
            android:text="@string/category_c"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_category_events" />

        <CheckBox
            android:id="@+id/cb_category_topography"
            style="@style/CategoryCheckBoxRight"
            android:text="@string/category_d"
            app:layout_constraintTop_toTopOf="@id/cb_category_definitions"
            app:layout_constraintLeft_toLeftOf="@id/cb_category_persons" />

        <CheckBox
            android:id="@+id/cb_category_battles"
            style="@style/CategoryCheckBoxLeft"
            android:text="@string/category_e"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_category_definitions" />

        <CheckBox
            android:id="@+id/cb_category_culture"
            style="@style/CategoryCheckBoxRight"
            android:text="@string/category_f"
            app:layout_constraintTop_toTopOf="@id/cb_category_battles"
            app:layout_constraintLeft_toLeftOf="@id/cb_category_topography" />

        <TextView
            android:id="@+id/tv_shuffle_cards_label"
            style="@style/ShuffleCardsTitle"
            android:text="@string/shuffle_cards"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_category_battles" />

        <RadioGroup
            android:id="@+id/rg_shuffle_cards"
            style="@style/RadioGroupShuffleCards"
            android:checkedButton="@+id/rb_shuffle_false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_shuffle_cards_label" >

            <RadioButton
                android:id="@+id/rb_shuffle_true"
                style="@style/RadioButtonShuffleCards"
                android:text="@string/yes_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_shuffle_cards" />

            <RadioButton
                android:id="@id/rb_shuffle_false"
                style="@style/RadioButtonShuffleCards"
                android:text="@string/no_button"
                app:layout_constraintLeft_toLeftOf="@id/rb_shuffle_true"
                app:layout_constraintTop_toBottomOf="@id/rg_shuffle_cards" />

        </RadioGroup>

        <Button
            android:id="@+id/b_start_quiz"
            style="@style/StartQuizButton"
            android:text="@string/start_button"
            android:onClick="onClickStartQuiz"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_shuffle_cards"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>